--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,35 +8,35 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
-
-.header div {
+/* changed header div to header nav */
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+/* changed header div ul to header nav ul */
+header nav ul {
     list-style-type: none;
 }
-
-.header div ul li {
+/* changed header div ul li to header nav ul li */
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -55,7 +55,8 @@ a {
     background-position: center;
 }
 /*moved .content to make code more logical*/
-.content {
+/* changed class .content to element main */
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -93,8 +94,8 @@ p {
     color: #ffffff;
 }
 
-/*compressed benefit-lead h3 .benefit-brand .benefit-cost*/
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3{
+/*compressed benefit-lead h3 .benefit-brand h3 .benefit-cost h3*/
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -123,14 +124,14 @@ p {
     font-size: 36px;
 }
 
-
-.footer {
+/* changed .footer  to footer and .footer h2 to footer h2*/
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
